--- a/index.html
+++ b/index.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Introduccion JS</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="content">
-        <h1>Análisis Y Desarrollo de Software</h1>
+        <h1>Análisis Y Desarrollo de Software</h1   >
     <!--La etiqueta target en HTML es un atributo que se usa en los enlaces
     (a>) o formulario (<form>) para especificar como y donde abrirse el 
     contenido vinculado o enviado -->
         <a href="https://www.instagram.com/ale_c.c13/"
         target="_blank">mi instagram</a>
-            <p>JS Introduccion</p>
-            <p> class="hashtag">#Ale_c.c13</p>
+            <p> JS Introduccion</p>
+            <p class="hashtag">#Ale_c.c13</p>
     </div><!-- content-->
+<script src="script.js"></script>
 </body>
+
 </html>
